Closed Bug 1308606 Opened 9 years ago Closed 9 years ago

Crash in mozilla::safebrowsing::Classifier::UpdateHashStore

Categories

(Toolkit :: Safe Browsing, defect, P1)

Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: jchen, Assigned: dimi)

References

Details

(Keywords: crash, Whiteboard: #sbv4-m1)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-bc96419a-7933-4b1d-91d5-969522161007. ============================================================= Low volume crash that started with the 10-06 Nightly. Currently it's the #1 crash for that Nightly on Android. Dimi, do you think it's a regression from bug 1305801?
Flags: needinfo?(dlee)
Priority: -- → P1
(In reply to Jim Chen [:jchen] [:darchons] from comment #0) > This bug was filed from the Socorro interface and is > report bp-bc96419a-7933-4b1d-91d5-969522161007. > ============================================================= > > Low volume crash that started with the 10-06 Nightly. Currently it's the #1 > crash for that Nightly on Android. Dimi, do you think it's a regression from > bug 1305801? Yes, this is a regression of bug 1305801, I will fix it.
Assignee: nobody → dlee
Status: NEW → ASSIGNED
Flags: needinfo?(dlee)
Comment on attachment 8799111 [details] Bug 1308606 - Crash in mozilla::safebrowsing::Classifier::UpdateHashStore. https://reviewboard.mozilla.org/r/84412/#review83004
Attachment #8799111 - Flags: review?(francois) → review+
Blocks: 1305801
Whiteboard: #sbv4-m1
Keywords: checkin-needed
Pushed by cbook@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e585a3f41bba Crash in mozilla::safebrowsing::Classifier::UpdateHashStore. r=francois
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: