Bug 1308606 - Crash in mozilla::safebrowsing::Classifier::UpdateHashStore. r=francois

MozReview-Commit-ID: FIl5cPFzGbl

--HG--
extra : rebase_source : 1138e1b23a60c7e798b0f112a9268005de10e117